apps.acepod.com/demo-01-hello-kubernetes/hello-kubernetes-openshift-route.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-kubernetes
  namespace: hello
  labels:
    app: avi-gslb
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: hello-kubernetes
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-kubernetes
  namespace: hello
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-kubernetes
  template:
    metadata:
      labels:
        app: hello-kubernetes
    spec:
      containers:
      - name: hello-kubernetes
        image: paulbouwer/hello-kubernetes:1.5
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: regcred
---
apiVersion: v1
items:
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
    labels:
      app: avi-gslb
    name: hello-kubernetes
    namespace: hello
  spec:
    host: hello.apps.acepod.com
    port:
      targetPort: http
    to:
      kind: Service
      name: hello-kubernetes
      weight: 100
    wildcardPolicy: None
